2009-09-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	The following bugs were found: `setempty' was not functional for
	floating-point shared parameters; and function calls with
	heterogenous register classes as arguments would not be called
	properly.
	
	* 0_slc/1_createargs/delaysharedf.c,
	* 0_slc/4_funcalls/f11.c: New. 

2009-09-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add test for `slr' bug.
	
	* 1_slr/bigdata.c,
	* 1_slr/bigdata.c.d: New.

	* Makefile.am: Update accordingly.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add tests for `alloca'.
	
	* 2_lib/alloca/a1.c,
	* 2_lib/alloca/a2.c,
	* 2_lib/alloca/a3.c: New.

	* 2_lib/sac1.c: Also test `alloca' and `safe_free'.

2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/mkalltests.sh: Be more verbose. 

2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make package less dependent on the base tree.
	
	* bootstrap: Make less verbose. Use the new `sl-init-autoconf'.

2009-08-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* ChangeLog: initialize.

See `slc/ChangeLog.1' for earlier changes.
